--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
     <meta name="theme-color" content="#ffffff">
     <title>Cool Raspberry Pi Website!</title>
 </head>
+  <h1>Look at me! I have color!</h1>
+<body>
+<p>Epic text here.</p>
 
+</body>
 
 </html>
