--- a/index.html
+++ b/index.html
@@ -1,18 +1,17 @@
 <!DOCTYPE html>
-  <html lang="en-ca">
-  <link rel="stylesheet" href="/css/style.css">
-<head>
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-    <link rel="manifest" href="/site.webmanifest">
+<html lang="en-ca">
+  <link rel="stylesheet" href="./css/styles.css">
+  <head>
+    <link rel="apple-touch-icon" sizes="180x180" href="images/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="images/favicon-16x16.png">
+    <link rel="manifest" href="images/site.webmanifest">
     <meta name="msapplication-TileColor" content="#da532c">
     <meta name="theme-color" content="#ffffff">
     <title>Cool Raspberry Pi Website!</title>
-</head>
+  </head>
   <h1>Look at me! I have color!</h1>
-<body>
-<p>Epic text here.</p>
-</body>
-
+  <body>
+    <p>Epic text here.</p>
+  </body>
 </html>
