--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="manifest" href="images/site.webmanifest">
     <meta name="msapplication-TileColor" content="#da532c">
     <meta name="theme-color" content="#ffffff">
-    <img src="snorlaxsleep.jpg" alt="Sleepy Snorlax">
+    <img src=.images/sleepysnorlax.jpg alt="sleepysnorlax">
     <title>Cool Raspberry Pi Website!</title>
   </head>
   <h1>Look at me! I have color!</h1>
