--- a/index.html
+++ b/index.html
@@ -13,15 +13,15 @@
   </head>
   <h1>Look at me! I have color!</h1>
   <body>
-    <p1>Epic text here.</p1>
-    
-    <p2>Almost heaven, West Virginia,
+    <p>Epic text here.</p>
+
+    <p>Almost heaven, West Virginia,
       Blue Ridge Mountains, Shanandoah River.
       Life is old there, older than thhe trees.
       Younger than the mountains, blowing like a breeze
       Country roads, take me home,
       to the place I belong.
       West Virginia, mountain mama, take me home
-      Country Roads.</p2>
+      Country Roads.</p>
   </body>
 </html>
