--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
     <p>Almost heaven, West Virginia,
       Blue Ridge Mountains, Shanandoah River.
-      Life is old there, older than thhe trees.
+      Life is old there, older than the trees.
       Younger than the mountains, blowing like a breeze
       Country roads, take me home,
       to the place I belong.
