--- a/index.html
+++ b/index.html
@@ -23,5 +23,10 @@
       to the place I belong.
       West Virginia, mountain mama, take me home
       Country Roads.</p>
+
+    <form action="welcome.php" method="post">
+    Name: <input type="text" name="name"><br>
+    <input type="submit">
+    </form>
   </body>
 </html>
