--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     <meta name="msapplication-TileColor" content="#da532c">
     <meta name="theme-color" content="#ffffff">
     <img src="./images/snorlaxsleep.jpg" alt="Sleepy Snorlax">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+    <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.indigo-pink.min.css">
+    <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
     <title>Cool Raspberry Pi Website!</title>
   </head>
   <h1>Look at me! I have color!</h1>
@@ -25,9 +28,13 @@
       Country Roads.</p>
 
     <form action="welcome.php" method="post">
-    Name: <input type="text" name="name"><br>
-    E-mail: <input type="text" name="email"><br>
-    <input type="submit">
+      <div class="mdl-textfield mdl-js-textfield">
+        <input class="mdl-textfield__input" type="text" id="sample1">
+        <label class="mdl-textfield__label" for="sample1">Text...</label>
+       </div>
+       <button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent">
+       Press Me
+      </button>
     </form>
   </body>
 </html>
