--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
     <link rel="manifest" href="images/site.webmanifest">
     <meta name="msapplication-TileColor" content="#da532c">
     <meta name="theme-color" content="#ffffff">
-    <img src="./images/snorlaxsleep.jpg" alt="Sleepy Snorlax">
+    <img src="./images/snorlaxsleep.jpg" alt="Sleepy Snorlax"
+    width="250"
+    height="250">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.indigo-pink.min.css">
     <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
