--- a/index.html
+++ b/index.html
@@ -33,8 +33,10 @@
       <div class="mdl-textfield mdl-js-textfield">
         <input class="mdl-textfield__input" type="text" id="sample1">
         <label class="mdl-textfield__label" for="sample1">name</label>
+        </div>
         <br>
         <br>
+        <div class="mdl-textfield mdl-js-textfield">
         <input class="mdl-textfield__input" type="text" id="sample1">
         <label class="mdl-textfield__label" for="sample1">email</label>
        </div>
